# storage/api-docs/api-docs.json
@@ -417,6 +417,62 @@
                 ]
             }
         },
+        "/api/like": {
+            "post": {
+                "summary": "add comment to post",
+                "operationId": "be176c487a370eb299781a9298e864b6",
+                "parameters": [
+                    {
+                        "name": "post_id",
+                        "in": "query",
+                        "description": "Enter your id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Login successful"
+                    },
+                    "401": {
+                        "description": "Invalid credentials"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/unlike/{id}": {
+            "delete": {
+                "summary": "Unlike a post",
+                "operationId": "9caf84a69309b381e0b45ee4f0a09bc0",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The resource was successfully retrieved"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/posts": {
             "get": {
                 "summary": "Get all post",
